--- a/_config.yml
+++ b/_config.yml
@@ -1,76 +1,46 @@
-# (string) Title of your wiki
-title: git-wiki
-demo_ver: 1.0.14
-remote_theme: Drassil/git-wiki-theme@master
-description: Git-Wiki demo and documentation
-show_downloads: true
-show_wiki_pages: true
-show_wiki_pages_limit: 10
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: MatJek
+description: > # this means to ignore newlines until "baseurl:"
+  Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
+baseurl: "/matjek"
+url: "https://shawnteoh.github.io"
+permalink: /:year/:month/:day/:title
+repository: ShawnTeoh/matjek
 paginate: 5
-paginate_path: "assets/blog/page:num"
-blog_feature: true
-show_wiki_posts: true
-show_wiki_posts_limit: 5
-logo_url: assets/images/1200px-Wikipedia-logo-v2.svg_.png
-google_analytics:
-git_branch: gh-pages
-use_github_wiki: false
-use_prose_io: true
-service: github
-search_engine : "js"
-google_cse_token: 007197903287787072094:8rbvkeqo6qw
-wiki_folder : "wiki"
-permalink: /blog/posts/:year/:month/:day/:title:output_ext
-site_root: 
 
-#
-# Jekyll
-#
+# MatJek specific configurations
+github_profile: "https://github.com/ShawnTeoh"
+user: "John Doe"
+user_email: "john@doe.com"
+contact_url: "https://goo.gl/tVljbV"
+google_tracking_id: "UA-96359860-1"
+google_site_verification: "UA-96359860-1"
+disqus_shortname: "matjek"
 
-defaults:
- - 
-    scope:
-      path: "wiki"
-    values:
-      permalink: /:basename
- -
-    scope:
-      path: "" # an empty string here means all files in the project
-    values:
-      layout: "git-wiki-default"
- -
-    scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "git-wiki-default"
- -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "git-wiki-post"
- -
-    scope:
-      path: assets/blog
-    values:
-      layout: "git-wiki-blog"
-
-plugins:
- - jekyll-feed
- - jekyll-redirect-from
- - jekyll-seo-tag
- - jekyll-sitemap
- - jekyll-avatar
- - jemoji
- - jekyll-mentions
-  
-#
-# INCLUDING HOOKS
-# They are optional, change them only if you need
-# Check wiki documentation to learn how they work
-#
-
-inc_after_content: "drassil/comments.html"
-inc_after_head : "drassil/head.html"
-inc_before_page_list : "drassil/sidebar.html"
+# Build settings
+markdown: kramdown
+gems:
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
+sass:
+  style: compressed
+future: true
