--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ feedback_subject_line: Inspiration
 feedback_email: lzch24035@163.com
 # used as a contact email for the Feedback link in the top navigation bar
 
-# feedback_disable: true
+feedback_disable: true
 # if you uncomment the previous line, the Feedback link gets removed
 
 # feedback_text: "Need help?"
@@ -71,9 +71,9 @@ defaults:
       type: "pages"
     values:
       layout: "page"
-      comments: true
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
-      search: true
+      search: false
       sidebar: home_sidebar
       topnav: topnav
   -
@@ -106,7 +106,7 @@ sidebars:
 - product2_sidebar
 - other
 
-description: "Intended as a inspiration theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other inspiration features."
+description: " "
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
