--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -23,7 +23,7 @@ entries:
     output: web, pdf
     folderitems:
 
-    - title: Get started
+    - title: 原创目录
       url: /index.html
       output: web, pdf
       type: homepage
@@ -32,17 +32,7 @@ entries:
       url: /mydoc_introduction.html
       output: web, pdf
 
-    - title: Supported features
-      url: /mydoc_supported_features.html
-      output: web, pdf
 
-    - title: About the theme author
-      url: /mydoc_about.html
-      output: web, pdf
-
-    - title: Support
-      url: /mydoc_support.html
-      output: web, pdf
 
   - title: 转载文章
     output: web, pdf
@@ -52,7 +42,12 @@ entries:
       url: /mydoc_release_notes_60.html
       output: web, pdf
 
+  - title: Feedback
+    output: web, pdf
+    folderitems:
 
-
+      - title: Support
+        url: /mydoc_support.html
+        output: web, pdf
 
 # Copyright 2021 Google LLC
