--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ output: web
 topnav_title: Inspiration 
 # this appears on the top navigation bar next to the home button
 
-site_title: Inspiration
+site_title: Daniel
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
 company_name: Copyright 2022 Daniel
