--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -32,7 +32,7 @@ entries:
         output: web, pdf
 
       - title: 记忆承载[转载]
-        url: /zzsb_index.html
+        url: /jycz_index.html
         output: web, pdf
 
       - title: Feedback
