--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -27,11 +27,11 @@ entries:
         output: web, pdf
         type: homepage
 
-      - title: 致知随笔[原创]
+      - title: 致知随笔[^原创^]
         url: /zzsb_index.html
         output: web, pdf
 
-      - title: 记忆承载[转载]
+      - title: 记忆承载[^转载^]
         url: /jycz_index.html
         output: web, pdf
 
